// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeviceList snapshots > renders discovered devices snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative h-full overflow-hidden bg-bg-primary p-3 sm:p-4 lg:p-5"
  >
    <div
      class="pointer-events-none absolute inset-0 overflow-hidden"
    >
      <div
        class="absolute -top-16 -left-16 h-80 w-80 rounded-full bg-cyan-300/15 blur-3xl dark:bg-cyan-500/10"
      />
      <div
        class="absolute top-20 right-0 h-96 w-96 rounded-full bg-slate-300/10 blur-3xl dark:bg-slate-500/10"
      />
    </div>
    <div
      class="relative z-10 flex h-full min-h-0 flex-col gap-3"
    >
      <div
        class="flex h-full min-h-0 flex-col gap-3"
      >
        <div
          class="rounded-2xl border border-slate-200/70 bg-white/85 backdrop-blur-sm shadow-sm dark:border-slate-800 dark:bg-slate-950/65 shrink-0 p-3.5 sm:p-4"
        >
          <p
            class="text-xs uppercase tracking-[0.22em] text-cyan-600 dark:text-cyan-300"
          >
            Asset Inventory
          </p>
          <div
            class="mt-2 flex flex-wrap items-end justify-between gap-2"
          >
            <h1
              class="text-2xl font-black text-text-primary sm:text-3xl"
            >
              Devices
            </h1>
            <span
              class="rounded-full border border-theme bg-bg-tertiary/70 px-2.5 py-1 text-xs font-semibold text-text-muted"
            >
              2 discovered
            </span>
          </div>
          <p
            class="mt-1 text-sm text-text-secondary"
          >
            Search, filter, and inspect discovered network assets by state and risk.
          </p>
        </div>
        <div
          class="rounded-2xl border border-slate-200/70 bg-white/85 backdrop-blur-sm shadow-sm dark:border-slate-800 dark:bg-slate-950/65 shrink-0 p-3"
        >
          <div
            class="flex flex-col gap-2.5 xl:flex-row xl:items-center"
          >
            <div
              class="relative w-full xl:w-[320px] xl:min-w-[280px] xl:flex-none"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-search absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-text-muted"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
                <path
                  d="m21 21-4.3-4.3"
                />
              </svg>
              <input
                class="h-8 w-full rounded-lg border border-theme bg-bg-tertiary pl-10 pr-4 text-[13px] text-text-primary placeholder:text-text-muted transition-all focus:outline-none focus:ring-2 focus:ring-accent-blue/50"
                placeholder="Search by IP, MAC, hostname..."
                type="text"
                value=""
              />
            </div>
            <div
              class="grid min-w-0 flex-1 grid-cols-2 gap-1 sm:grid-cols-4"
            >
              <div
                class="relative flex min-w-0"
              >
                <div
                  class="absolute inset-0 rounded-lg border border-accent-blue/45 bg-accent-blue/10"
                />
                <button
                  class="relative z-10 flex h-8 w-full items-center justify-center gap-1 rounded-lg px-2 text-[13px] font-medium transition-colors text-accent-blue"
                >
                  <span
                    class="truncate"
                  >
                    All Devices
                  </span>
                  <span
                    class="rounded-md px-1.5 py-0.5 text-[10px] transition-colors bg-accent-blue/20 text-accent-blue"
                  >
                    2
                  </span>
                </button>
              </div>
              <div
                class="relative flex min-w-0"
              >
                <button
                  class="relative z-10 flex h-8 w-full items-center justify-center gap-1 rounded-lg px-2 text-[13px] font-medium transition-colors border border-theme bg-bg-tertiary/60 text-text-muted hover:text-text-primary hover:bg-bg-hover"
                >
                  <span
                    class="truncate"
                  >
                    Online
                  </span>
                  <span
                    class="rounded-md px-1.5 py-0.5 text-[10px] transition-colors bg-bg-secondary text-text-muted"
                  >
                    2
                  </span>
                </button>
              </div>
              <div
                class="relative flex min-w-0"
              >
                <button
                  class="relative z-10 flex h-8 w-full items-center justify-center gap-1 rounded-lg px-2 text-[13px] font-medium transition-colors border border-theme bg-bg-tertiary/60 text-text-muted hover:text-text-primary hover:bg-bg-hover"
                >
                  <span
                    class="truncate"
                  >
                    Warning
                  </span>
                  <span
                    class="rounded-md px-1.5 py-0.5 text-[10px] transition-colors bg-bg-secondary text-text-muted"
                  >
                    0
                  </span>
                </button>
              </div>
              <div
                class="relative flex min-w-0"
              >
                <button
                  class="relative z-10 flex h-8 w-full items-center justify-center gap-1 rounded-lg px-2 text-[13px] font-medium transition-colors border border-theme bg-bg-tertiary/60 text-text-muted hover:text-text-primary hover:bg-bg-hover"
                >
                  <span
                    class="truncate"
                  >
                    Offline
                  </span>
                  <span
                    class="rounded-md px-1.5 py-0.5 text-[10px] transition-colors bg-bg-secondary text-text-muted"
                  >
                    0
                  </span>
                </button>
              </div>
            </div>
            <span
              class="text-xs font-medium text-text-muted xl:min-w-[170px] xl:text-right"
            >
              Showing 2 of 2 devices
            </span>
          </div>
        </div>
        <div
          class="min-h-0 flex-1 overflow-y-auto pr-1"
        >
          <div
            class="grid auto-rows-fr grid-cols-1 gap-3 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5"
          >
            <div
              class="h-full"
            >
              <article
                data-testid="device-card"
              >
                192.168.88.1
              </article>
            </div>
            <div
              class="h-full"
            >
              <article
                data-testid="device-card"
              >
                192.168.88.20
              </article>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeviceList snapshots > renders initial empty-state snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative h-full overflow-hidden bg-bg-primary p-3 sm:p-4 lg:p-5"
  >
    <div
      class="pointer-events-none absolute inset-0 overflow-hidden"
    >
      <div
        class="absolute -top-16 -left-16 h-80 w-80 rounded-full bg-cyan-300/15 blur-3xl dark:bg-cyan-500/10"
      />
      <div
        class="absolute top-20 right-0 h-96 w-96 rounded-full bg-slate-300/10 blur-3xl dark:bg-slate-500/10"
      />
    </div>
    <div
      class="relative z-10 flex h-full min-h-0 flex-col gap-3"
    >
      <div
        class="flex h-full min-h-0 flex-col gap-3"
      >
        <div
          class="rounded-2xl border border-slate-200/70 bg-white/85 backdrop-blur-sm shadow-sm dark:border-slate-800 dark:bg-slate-950/65 shrink-0 p-3.5 sm:p-4"
        >
          <p
            class="text-xs uppercase tracking-[0.22em] text-cyan-600 dark:text-cyan-300"
          >
            Asset Inventory
          </p>
          <h1
            class="mt-2 text-2xl font-black text-text-primary sm:text-3xl"
          >
            Devices
          </h1>
          <p
            class="mt-1.5 text-sm text-text-secondary"
          >
            No scan data available.
          </p>
        </div>
        <div
          class="rounded-2xl border border-slate-200/70 bg-white/85 backdrop-blur-sm shadow-sm dark:border-slate-800 dark:bg-slate-950/65 relative flex min-h-0 flex-1 items-center justify-center overflow-hidden"
        >
          <div
            class="pointer-events-none absolute inset-x-0 top-0 h-32 bg-gradient-to-b from-cyan-300/10 to-transparent dark:from-cyan-500/10"
          />
          <div
            class="relative z-10 mx-auto flex w-full max-w-2xl flex-col items-center justify-center px-6 py-10 text-center"
          >
            <div
              class="mb-4 flex h-16 w-16 items-center justify-center rounded-2xl border border-cyan-300/40 bg-cyan-100/40 text-cyan-700 dark:border-cyan-500/30 dark:bg-cyan-500/10 dark:text-cyan-300"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-wifi-off h-8 w-8"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h.01"
                />
                <path
                  d="M8.5 16.429a5 5 0 0 1 7 0"
                />
                <path
                  d="M5 12.859a10 10 0 0 1 5.17-2.69"
                />
                <path
                  d="M19 12.859a10 10 0 0 0-2.007-1.523"
                />
                <path
                  d="M2 8.82a15 15 0 0 1 4.177-2.643"
                />
                <path
                  d="M22 8.82a15 15 0 0 0-11.288-3.764"
                />
                <path
                  d="m2 2 20 20"
                />
              </svg>
            </div>
            <h2
              class="text-2xl font-bold text-text-primary sm:text-[2rem]"
            >
              Ready to discover your devices
            </h2>
            <p
              class="mt-2 max-w-xl text-sm text-text-secondary sm:text-base"
            >
              Start a network scan to populate inventory, classify device types, and unlock risk insights.
            </p>
            <div
              class="mt-4 flex flex-wrap justify-center gap-2 text-[11px] font-medium"
            >
              <span
                class="rounded-full border border-theme bg-bg-tertiary/70 px-2.5 py-1 text-text-muted"
              >
                Live Inventory
              </span>
              <span
                class="rounded-full border border-theme bg-bg-tertiary/70 px-2.5 py-1 text-text-muted"
              >
                Online or Offline Status
              </span>
              <span
                class="rounded-full border border-theme bg-bg-tertiary/70 px-2.5 py-1 text-text-muted"
              >
                Risk Overview
              </span>
            </div>
            <p
              class="mt-4 text-xs text-text-muted"
            >
              Use the top-right Start Scan button to begin discovery.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
